# moses-tokenizer-cpp

./: CMakeLists.txt  README.md  tokenizer_main.cc
data/perluniprops/: IsAlpha.txt.h
src/: nonbreaking_prefix_set.cc  nonbreaking_prefix_set.hh  regex.cc  regex.hh  tokenizer.cc  tokenizer.hh
